--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "Brain Games for command line",
   "main": "index.js",
   "scripts": {
@@ -25,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/cgehuzi/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/cgehuzi/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/cgehuzi/frontend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
