--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
+    "@jest/globals": "^27.4.4",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
