--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cgehuzi/brain-games.git"
+    "url": "git+https://github.com/cgehuzi/frontend-project-lvl1.git"
   },
   "keywords": [
     "hexlet",
@@ -28,9 +28,9 @@
   "author": "cgehuzi <mail.cgehuzi@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cgehuzi/brain-games/issues"
+    "url": "https://github.com/cgehuzi/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/cgehuzi/brain-games#readme",
+  "homepage": "https://github.com/cgehuzi/frontend-project-lvl1#readme",
   "dependencies": {
     "lodash": "^4.17.21",
     "readline-sync": "^1.4.10"
